<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.austinegwa64.myrevisionapp.Home">
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_answers"
        android:orderInCategory="100"
        android:title="@string/my_instructors"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_FAQs"
        android:orderInCategory="100"
        android:title="@string/faqs"
        app:showAsAction="never" />
</menu>
