<?xml version="1.0" encoding="utf-8"?>

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/myColor" >



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_lock_open_black_24dp"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        />

    <EditText
        android:layout_marginTop="10sp"
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:ems="10"
        android:hint="@string/Pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="#fff"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:text="@string/login" />

    <Button
        android:id="@+id/sign_up"

        android:textColor="#fff"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:text="@string/signup" />
</LinearLayout>
